# ToDoList

./: .env.example  .gitignore  CLI.py  Main.py  README.md  Services.py  Storage.py  alembic.ini  config.py  models.py  pyproject.toml
app/: config.py  main.py
app/cli/: cli.py  console.py
app/commands/: autoclose_overdue.py
app/db/: session.py
app/memory/: storage.py
app/models/: project.py  task.py
app/repositories/: project_repository.py  task_repository.py
app/services/: project_service.py  services.py  task_service.py
